--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,6 +7,8 @@
 <body>
 <header>
     <h1><a href="/">temporal harmony harden</a></h1>
+
+    <h4 class="important-text">a simple domain</h4>
 </header>
 <main>
     <a href="/">home</a>
