--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,6 +24,19 @@
     --header-color: #ffa500; /* Bold orange header color */
 }
 
+/* Dark theme preference */
+@media (prefers-color-scheme: light) {
+    :root {
+        --background-color: #f6c2ed;
+        --secondary-background-color: #fda1e1;
+        --text-color: #111111;
+        --link-color: #044fcd;
+        --accent-color: #0a6e25;
+        --header-color: #ab0000;
+    }
+
+}
+
 /* Body Styles */
 body {
     font-family: 'Inconsolata', monospace;
