Create and add colophon

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css"/>
 </head>
 <body>
 <header>
@@ -12,10 +12,11 @@
 </header>
 <main>
     <a href="/">home</a>
+    <a href="/colophon">/colophon</a>
     {{ content | safe }}
 </main>
 <footer>
-    <p>&copy; 2023 <a href="https://parth.ninja" target="_blank">Parth Shiralkar</a>. Temporal Harmony Garden - A Simple Domain.</p>
+    <p>&copy; 2023 <a href="https://parth.ninja" target="_blank">Parth Shiralkar</a></p>
 </footer>
 </body>
 </html>
