--- a/src/index.njk
+++ b/src/index.njk
@@ -9,7 +9,7 @@ templateEngineOverride: njk, md
 <ul>
     {% for post in collections.post %}
         <li>
-            <a href="{{ post.url }}">{{ post.data.title }}</a>
+            <a href="{{ post.url }}">{{ post.data.title }}</a><span> {{ post.data.date | date('YYYY-MM-DD') }}</span>
         </li>
     {% endfor %}
 </ul>
