remove light theme

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,26 +16,25 @@
 
 /* Define custom colors */
 :root {
-    --background-color: #281717; /* Dark background color */
-    --secondary-background-color: #462e2e; /* Lighter background color */
-    --text-color: #f0f0f0; /* Light text color */
-    --link-color: #00bfff; /* Bold blue link color */
-    --accent-color: #ff6347; /* Bold red accent color */
-    --header-color: #ffa500; /* Bold orange header color */
+    --background-color: #110b0b; /* Dark background color */
+    --secondary-background-color: #281b1b; /* Lighter background color */
+    --text-color: #a4a0a0; /* Light text color */
+    --link-color: #06a3d7; /* Bold blue link color */
+    --accent-color: #b23923; /* Bold red accent color */
+    --header-color: #c27d03; /* Bold orange header color */
 }
 
 /* Dark theme preference */
-@media (prefers-color-scheme: light) {
-    :root {
-        --background-color: #f6c2ed;
-        --secondary-background-color: #fda1e1;
-        --text-color: #111111;
-        --link-color: #044fcd;
-        --accent-color: #0a6e25;
-        --header-color: #ab0000;
-    }
-
-}
+/*@media (prefers-color-scheme: light) {*/
+/*    :root {*/
+/*        --background-color: #f6c2ed;*/
+/*        --secondary-background-color: #fda1e1;*/
+/*        --text-color: #111111;*/
+/*        --link-color: #044fcd;*/
+/*        --accent-color: #0a6e25;*/
+/*        --header-color: #ab0000;*/
+/*    }*/
+/*}*/
 
 /* Body Styles */
 body {
