--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -110,15 +110,16 @@ a:hover {
 }
 
 main {
-
+    max-width: 100vw;
     margin: 1em auto;
     padding: 1em;
     box-shadow: 0 0 3px var(--text-color);
     background-color: var(--background-color);
     color: var(--text-color);
-
-
 }
+
+
+/* Media Queries */
 
 @media (min-width: 768px) {
     body {
