--- a/src/index.njk
+++ b/src/index.njk
@@ -4,7 +4,7 @@ title:  'glyph'
 date: 2023-10-23
 templateEngineOverride: njk, md
 ---
-## glyph
+## Glyph
 
 <ul>
     {% for post in collections.post %}
