--- a/src/index.njk
+++ b/src/index.njk
@@ -7,8 +7,7 @@ templateEngineOverride: njk, md
 ## Glyph
 
 <ul>
-    {% for post in collections.post %}
-        <li>
+    {% for post in collections.post %}<li>
             <a href="{{ post.url }}">{{ post.data.title }}</a><span> {{ post.data.date | date('YYYY-MM-DD') }}</span>
         </li>
     {% endfor %}
