--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -3,6 +3,6 @@ layout: layouts/base
 ---
 <h2>{{ title | safe }}</h2>
 ---
-<div class="content">
+<div class="post-content">
   {{ content | safe }}
 </div>
