--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A little subsite in the lower Discworld">
+    <meta name="keywords" content="Parth Shiralkar">
+    <meta name="author" content="Parth Shiralkar">
+
+    <!-- Add other essential meta tags for SEO, like Open Graph and Twitter Card tags -->
+
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="/css/styles.css"/>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 <header>
-    <h1><a href="/">temporal harmony harden</a></h1>
-
-    <h4 class="important-text">a simple domain</h4>
+    <h1><a href="/" title="Home">temporal harmony garden</a></h1>
+    <h2 class="subheadline">a simple domain</h2>
 </header>
 <main>
-    <a href="/">home</a>
-    <a href="/colophon">/colophon</a>
-    {{ content | safe }}
+    <nav>
+        <ul>
+            <li><a href="/" title="Home">home</a></li>
+            <li><a href="/colophon" title="Colophon">/colophon</a></li>
+        </ul>
+    </nav>
+
+    <article>
+        {{ content | safe }}
+    </article>
 </main>
 <footer>
     <p>&copy; 2023 <a href="https://parth.ninja" target="_blank">Parth Shiralkar</a></p>
