--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -178,7 +178,7 @@ th {
 /* Reset paragraph styles */
 p {
     margin: 0.75em 0;
-    line-height: 1.1;
+    line-height: 1.3;
 }
 
 /* Styles for the blockquote element */
@@ -206,7 +206,7 @@ pre {
     border: 1px solid var(--text-color);
     border-radius: 5px;
     padding: 10px;
-    margin: 1em 0;
+    margin: 0.75em 0;
     overflow-x: auto;
     font-family: 'Courier New', monospace;
     line-height: 1.4;
@@ -216,7 +216,7 @@ pre {
 pre code {
     display: block;
     padding: 5px;
-    font-size: 80%;
+    font-size: 90%;
     color: var(--text-color);
     background-color: var(--secondary-background-color);
     border-radius: 5px;
@@ -224,7 +224,8 @@ pre code {
 
 code {
     padding: 5px;
-    font-size: 80%;
+    font-size: 90%;
+    line-height: 1.4;
     color: var(--text-color);
     background-color: var(--secondary-background-color);
     border-radius: 5px;
@@ -247,4 +248,11 @@ nav ul {
 
 main article ul li, main article ol li {
     margin: 0.75em 0;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 1em auto;
 }
