Get rid of custom fonts

--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -14,7 +14,12 @@ What we have here is simply a smaller, simpler domain for me to pour a beaker or
 
 The site is, of course, built via [Eleventy](https://www.11ty.dev/) and hosted on [Github Pages](https://pages.github.com/).
 
-The font face is [Inconsolata](https://levien.com/type/myfonts/inconsolata.html), a beautiful monospace font by Raph Levien.
+The monospace font stack is as follows:
+
+```css
+Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, Andale Mono WT, Andale Mono, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Nimbus Mono L, Courier, monospace;
+```
+
 
 The design and layout of this site is directly inspired by many personal sites of the older internet.
 
