--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,12 @@ templateEngineOverride: njk, md
 
 <ul>
     {% for post in collections.post %}<li>
-            <a href="{{ post.url }}">{{ post.data.title }}</a><span> {{ post.data.date | date('YYYY-MM-DD') }}</span>
+            <a href="{{ post.url }}" title="go to post">{{ post.data.title }}</a><span> {{ post.data.date | date('YYYY-MM-DD') }}</span>
         </li>
     {% endfor %}
 </ul>
+
+
+
+
+> ### It’s still magic even if you know how it’s done.
