deploy: e2f3a670c3aa5cd90fe78641503ffd09eadc954f

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,5 @@
 /* src/css/styles.css */
 
-@font-face {
-    font-family: 'Inconsolata'; /* Provide a name for your font */
-    src: url('Inconsolata-Regular.ttf') format('truetype'); /* Path to your TTF font file */
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap; /* Set font-display to 'swap' */
-}
-
-@font-face {
-    font-family: 'Inconsolata'; /* Provide a name for your font */
-    src: url('Inconsolata-Bold.ttf') format('truetype'); /* Path to your TTF font file */
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap; /* Set font-display to 'swap' */
-}
-
 /* Define custom colors */
 :root {
     --background-color: #110b0b; /* Dark background color */
@@ -26,26 +10,26 @@
     --header-color: #c27d03; /* Bold orange header color */
 }
 
-/* Dark theme preference */
-/*@media (prefers-color-scheme: light) {*/
-/*    :root {*/
-/*        --background-color: #f6c2ed;*/
-/*        --secondary-background-color: #fda1e1;*/
-/*        --text-color: #111111;*/
-/*        --link-color: #044fcd;*/
-/*        --accent-color: #0a6e25;*/
-/*        --header-color: #ab0000;*/
-/*    }*/
-/*}*/
+/* Light theme preference*/
+@media (prefers-color-scheme: light) {
+    :root {
+        --background-color: #f6c2ed;
+        --secondary-background-color: #fda1e1;
+        --text-color: #111111;
+        --link-color: #0742a8;
+        --accent-color: #0a6e66;
+        --header-color: #ab0000;
+    }
+}
 
 /* Body Styles */
 body {
-    font-family: 'Inconsolata', monospace;
+    font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, Andale Mono WT, Andale Mono, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Nimbus Mono L, Courier, monospace;
     margin: 0;
     padding: 0;
     background-color: var(--background-color);
     color: var(--text-color);
-    font-size: 1.35em;
+    font-size: 1.15em;
 }
 
 /* List Styles */
@@ -129,6 +113,10 @@ main {
     main {
         max-width: 800px;
     }
+
+    body {
+        font-size: 1.35em;
+    }
 }
 
 /* Add footer styles */
@@ -208,23 +196,20 @@ pre {
     padding: 10px;
     margin: 0.75em 0;
     overflow-x: auto;
-    font-family: 'Courier New', monospace;
     line-height: 1.4;
     white-space: pre-wrap;
 }
 
 pre code {
     display: block;
-    padding: 5px;
-    font-size: 90%;
+    padding: 6px;
     color: var(--text-color);
     background-color: var(--secondary-background-color);
     border-radius: 5px;
 }
 
 code {
-    padding: 5px;
-    font-size: 90%;
+    padding: 6px;
     line-height: 1.4;
     color: var(--text-color);
     background-color: var(--secondary-background-color);
@@ -248,6 +233,10 @@ nav ul {
 
 main article ul li, main article ol li {
     margin: 0.75em 0;
+}
+
+main article ul li a, main article ol li a {
+    font-size: 1.1em;
 }
 
 img {
