--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -6,11 +6,21 @@ templateEngineOverride: njk, md
 ---
 ## colophon
 
+### What is this?
+
+**Colophon** (n): A statement at the end of a book or document providing information about its production, such as the publication date, authorship, and printing details.
+
+### Why is this?
+
 This site came about as a direct result of a small train of thought I let my mind loose on; on a Monday of all days, Jeeves, my goodness.
 
 > Pah.
 
 What we have here is simply a smaller, simpler domain for me to pour a beaker or two of energy into.
+
+> The quote on the main page is by Terry Pratchett, one of my favourite authors.
+
+### Tech
 
 The site is, of course, built via [Eleventy](https://www.11ty.dev/) and hosted on [Github Pages](https://pages.github.com/).
 
@@ -20,6 +30,7 @@ The monospace font stack is as follows:
 Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, Andale Mono WT, Andale Mono, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Nimbus Mono L, Courier, monospace;
 ```
 
+### Design
 
 The design and layout of this site is directly inspired by many personal sites of the older internet.
 
@@ -27,3 +38,4 @@ I am a little young, but I am fond of the older web.
 And there are many sites like it, but this one is mine.
 
 There is a light and a dark theme that switches per the user's browser/system preference.
+
