Add a page for the garden

--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -18,6 +18,8 @@ This site came about as a direct result of a small train of thought I let my min
 
 What we have here is simply a smaller, simpler domain for me to pour a beaker or two of energy into.
 
+[Read more about the site's conception here.](/garden)
+
 > The quote on the main page is by Terry Pratchett, one of my favourite authors.
 
 ### Tech
