--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -30,7 +30,16 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     font-size: 1.15em;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Ccircle cx='10' cy='10' r='8' fill='%23281b1b' fill-opacity='0.1' /%3E%3Ccircle cx='10' cy='7' r='3' fill='%23281b1b' /%3E%3Cline x1='10' y1='10' x2='10' y2='15' stroke='%23281b1b' stroke-width='2' /%3E%3C/svg%3E");
 }
+
+@media (prefers-color-scheme: light) {
+    body {
+        color: var(--text-color);
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Ccircle cx='10' cy='10' r='8' fill='%23FFE2F6' fill-opacity='0.1' /%3E%3Ccircle cx='10' cy='7' r='3' fill='%23f8c1f1' /%3E%3Cline x1='10' y1='10' x2='10' y2='15' stroke='%23f8c1f1' stroke-width='2' /%3E%3C/svg%3E");
+    }
+}
+
 
 /* List Styles */
 ul {
@@ -51,8 +60,7 @@ li {
 
 header {
     text-align: center;
-    margin: 2em auto;
-    background: var(--background-color);
+    margin: 0 auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -122,6 +130,8 @@ footer {
     text-align: center;
     margin-top: 4em;
     padding: 1em 0;
+    bottom: 0;
+    width: 100%;
 }
 
 /* Style links in the footer */
