Fix download link for pubkey

--- a/src/key.njk
+++ b/src/key.njk
@@ -7,7 +7,7 @@ To ensure secure and private communication with me, you can use my public key to
 
 ### 1. Obtain the key
 
-<a href="/public.asc" download="your_public_key.asc">Download My Public Key</a>
+<a href="/public.asc" download="public.asc">Download My Public Key</a>
 
 ### 2. Import My Public Key
 
