Add post description

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -2,6 +2,7 @@
 layout: layouts/base
 ---
 <h2>{{ title | safe }}</h2>
+<p class="post-description">{{ description | safe }}</p>
 ---
 <div class="post-content">
   {{ content | safe }}
