--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -43,7 +43,9 @@
     </article>
 </main>
 <footer>
-    <p>&copy; <a href="https://parth.ninja" target="_blank" title="go to author page">parth shiralkar</a> | <a href="/key" title="public key"> public key</a></p>
+    <p>&copy; <a href="https://parth.ninja" target="_blank" title="go to author page">parth shiralkar, always</a>&nbsp;<a href="#" class="top-link" title="go to top">⬆</a></p>
+{#  go to top link  #}
+
 </footer>
 </body>
 </html>
