--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,6 +22,10 @@
     }
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 /* Body Styles */
 body {
     font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, Andale Mono WT, Andale Mono, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Nimbus Mono L, Courier, monospace;
@@ -29,7 +33,7 @@ body {
     padding: 0;
     background-color: var(--background-color);
     color: var(--text-color);
-    font-size: 1.15em;
+    font-size: 1.08em;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Ccircle cx='10' cy='10' r='8' fill='%23281b1b' fill-opacity='0.1' /%3E%3Ccircle cx='10' cy='7' r='3' fill='%23281b1b' /%3E%3Cline x1='10' y1='10' x2='10' y2='15' stroke='%23281b1b' stroke-width='2' /%3E%3C/svg%3E");
 }
 
@@ -61,6 +65,7 @@ li {
 header {
     text-align: center;
     margin: 0 auto;
+    font-size: 69%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -128,9 +133,8 @@ footer {
     background-color: var(--secondary-background-color); /* Link color in the footer */
     color: var(--text-color); /* Text color in the footer */
     text-align: center;
-    margin-top: 4em;
+    margin-top: 2em;
     padding: 1em 0;
-    bottom: 0;
     width: 100%;
 }
 
@@ -271,6 +275,16 @@ img {
     margin-left: 1.5em;
 }
 
+.top-link {
+    font-size: 1em;
+    color: var(--header-color);
+    background-color: var(--secondary-background-color);
+    box-shadow: 0 0 3px var(--text-color);
+    padding: 0.4em 0.5em;
+    border-radius: 5em;
+    text-decoration: none;
+}
+
 
 /* Media Queries */
 
@@ -281,5 +295,9 @@ img {
 
     body {
         font-size: 1.25em;
+    }
+
+    header {
+        font-size: 81%;
     }
 }
