--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -16,11 +16,11 @@ This site came about as a direct result of a small train of thought I let my min
 
 > Pah.
 
-What we have here is simply a smaller, simpler domain for me to pour a beaker or two of energy into.
+What we have here is simply a smaller, simpler domain for me to pour a beaker or two of energy into. All content is mine, and I am the sole author of this site.
 
 ### Tech
 
-The site is, of course, built via [Eleventy](https://www.11ty.dev/) and hosted on [Github Pages](https://pages.github.com/).
+The site is, of course, built via [Eleventy](https://www.11ty.dev/) and hosted on [Netlify](https://www.netlify.com/).
 
 The monospace font stack is as follows:
 
@@ -37,7 +37,9 @@ And there are many sites like it, but this one is mine.
 
 There is a light and a dark theme that switches per the user's browser/system preference.
 
-[Read more about the site's conception here.](/garden)
+Read more about [the site's conception here](/garden).
+
+See the [meta page](/meta) for more general information about the site.
 
 > The quote on the main page is by Terry Pratchett, one of my favourite authors.
 
