Add meta link to nav

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -35,6 +35,7 @@
         <ul>
             <li><a href="/" title="Home">home</a></li>
             <li><a href="/colophon" title="Colophon">/colophon</a></li>
+            <li><a href="/meta" title="meta">/meta</a></li>
         </ul>
     </nav>
 
