Add 404 example to meta

--- a/src/meta.njk
+++ b/src/meta.njk
@@ -23,3 +23,7 @@ A glyph is a symbol that conveys meaning through its form. An example of a glyph
 - 2023-10: Create the base site
 - 2023-10: Begin to write posts
 - 2023-11: Create secondary pages
+
+### Test 404
+
+[Not a valid link](/notfound)
