Redo meta pages

--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -1,32 +1,30 @@
 ---
-layout: layouts/base
+layout: layouts/post
 title: colophon
-description: how'd this book get published?
+description: a statement at the end of a book or document providing information about its production, such as the publication date, authorship, and printing details.
 templateEngineOverride: njk, md
 ---
-## colophon
+### Authorship
 
-### What is this?
-
-**Colophon** (n): A statement at the end of a book or document providing information about its production, such as the publication date, authorship, and printing details.
-
-### Why is this?
-
-This site came about as a direct result of a small train of thought I let my mind loose on; on a Monday of all days, Jeeves, my goodness.
-
-> Pah.
-
-What we have here is simply a smaller, simpler domain for me to pour a beaker or two of energy into. All content is mine, and I am the sole author of this site.
+All content on this site is owned by Parth Shiralkar.
 
 ### Tech
 
 The site is, of course, built via [Eleventy](https://www.11ty.dev/) and hosted on [Netlify](https://www.netlify.com/).
+
+HTML, CSS, Markdown, and Nunjucks templates are used to build the site.
 
 The monospace font stack is as follows:
 
 ```css
 Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, Andale Mono WT, Andale Mono, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Nimbus Mono L, Courier, monospace;
 ```
+
+### Privacy
+
+No language models or tracking services are used on this site. I don't care about all that.
+
+I will be developing this theme further (I'm lying), and releasing it as a template for others to use.
 
 ### Design
 
