--- a/src/meta.njk
+++ b/src/meta.njk
@@ -1,14 +1,21 @@
 ---
-layout: layouts/base.njk
+layout: layouts/post.njk
 title: meta
+description: meta information about the site
 templateEngineOverride: njk, md
 ---
 ## meta
 
-### About this site
+### Why and what is this?
+
+This site came about as a direct result of a small train of thought I let my mind loose on; on a Monday of all days, Jeeves, my goodness.
+
+> Pah.
+
+What we have here is simply a smaller, simpler domain for me to pour a beaker or two of energy into. All content is mine, and I am the sole author of this site.
 
 Find technical details about this site in [the colophon](/colophon).
-No language models or tracking services are used on this site. It's just a text blog for myself. If it's too raw or too much, please visit the tamer [main site](https://parth.ninja).
+It's just a text blog for myself. If it's too raw or too much, please visit the tamer [main site](https://parth.ninja).
 
 ### About me
 
