--- a/src/index.njk
+++ b/src/index.njk
@@ -1,11 +1,10 @@
 ---
-layout: layouts/base
+layout: layouts/post
 title:  'glyph'
+description: a list of all posts on the site
 date: 2023-10-23
 templateEngineOverride: njk, md
 ---
-## glyph
-
 <ul>
     {% for post in collections.post %}<li class="post-title">
             <a href="{{ post.url }}" title="go to post">{{ post.data.title }}</a><span> {{ post.data.date | date('YYYY-MM-DD') }}</span>
