--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
     --secondary-background-color: #281b1b; /* Lighter background color */
     --text-color: #b9b3b3; /* Light text color */
     --link-color: #06a3d7; /* Bold blue link color */
-    --accent-color: #b23923; /* Bold red accent color */
+    --accent-color: #f35032; /* Bold red accent color */
     --header-color: #c27d03; /* Bold orange header color */
 }
 
