--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,7 @@ footer {
     margin-top: 2em;
     padding: 0.1em 0;
     width: 100%;
+    font-size: 80%;
 }
 
 /* Style links in the footer */
@@ -280,17 +281,16 @@ img {
 }
 
 .top-link {
-    font-size: 1em;
+    font-size: 2em;
     color: var(--header-color);
     background-color: var(--secondary-background-color);
     box-shadow: 0 0 3px var(--text-color);
-    padding: 0.4em 0.5em;
+    padding: 0.25em;
     border-radius: 5em;
     text-decoration: none;
-    margin-top: 0.5em;
     position: fixed;
-    bottom: 1em;
-right: 1em;
+    bottom: 0.5em;
+    right: 0.65em;
 }
 
 
