--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base
 ---
-<h2>{{ title | safe }}</h2>
+<h2 class="post-content__title">{{ title | safe }}</h2>
 <p class="post-description">{{ description | safe }}</p>
 ---
 <div class="post-content">
