--- a/src/meta.njk
+++ b/src/meta.njk
@@ -4,18 +4,13 @@ title: meta
 description: meta information about the site
 templateEngineOverride: njk, md
 ---
-## meta
-
 ### Why and what is this?
 
-This site came about as a direct result of a small train of thought I let my mind loose on; on a Monday of all days, Jeeves, my goodness.
+It's a personal blog.
+I write about things that find me interesting. Not all of it will make sense; that's fine.
 
-> Pah.
+Locate more technical details about this site in [the colophon](/colophon).
 
-What we have here is simply a smaller, simpler domain for me to pour a beaker or two of energy into. All content is mine, and I am the sole author of this site.
-
-Find technical details about this site in [the colophon](/colophon).
-It's just a text blog for myself. If it's too raw or too much, please visit the tamer [main site](https://parth.ninja).
 
 ### About me
 
