Add carbon counter to colophon

--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -14,6 +14,9 @@ The site is, of course, built via [Eleventy](https://www.11ty.dev/) and hosted o
 
 HTML, CSS, Markdown, and Nunjucks templates are used to build the site.
 
+<div id="wcb" class="carbonbadge wcb-d"></div>
+<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
+
 The monospace font stack is as follows:
 
 ```css
