--- a/css/styles.css
+++ b/css/styles.css
@@ -11,16 +11,16 @@
 }
 
 /* Light theme preference*/
-@media (prefers-color-scheme: light) {
-    :root {
-        --background-color: #ffe2f6;
-        --secondary-background-color: #f8c1f1;
-        --text-color: #4f3c3c;
-        --link-color: #af0064;
-        --accent-color: #0a6e66;
-        --header-color: #0044ab;
-    }
-}
+/*@media (prefers-color-scheme: light) {*/
+/*    :root {*/
+        /*--background-color: #ffe2f6;*/
+        /*--secondary-background-color: #f8c1f1;*/
+        /*--text-color: #4f3c3c;*/
+        /*--link-color: #af0064;*/
+        /*--accent-color: #0a6e66;*/
+        /*--header-color: #0044ab;*/
+/*    }*/
+/*}*/
 
 html {
     scroll-behavior: smooth;
@@ -37,12 +37,12 @@ body {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Ccircle cx='10' cy='10' r='8' fill='%23281b1b' fill-opacity='0.1' /%3E%3Ccircle cx='10' cy='7' r='3' fill='%23281b1b' /%3E%3Cline x1='10' y1='10' x2='10' y2='15' stroke='%23281b1b' stroke-width='2' /%3E%3C/svg%3E");
 }
 
-@media (prefers-color-scheme: light) {
-    body {
-        color: var(--text-color);
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Ccircle cx='10' cy='10' r='8' fill='%23FFE2F6' fill-opacity='0.1' /%3E%3Ccircle cx='10' cy='7' r='3' fill='%23f8c1f1' /%3E%3Cline x1='10' y1='10' x2='10' y2='15' stroke='%23f8c1f1' stroke-width='2' /%3E%3C/svg%3E");
-    }
-}
+/*@media (prefers-color-scheme: light) {*/
+/*    body {*/
+/*        color: var(--text-color);*/
+/*        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Ccircle cx='10' cy='10' r='8' fill='%23FFE2F6' fill-opacity='0.1' /%3E%3Ccircle cx='10' cy='7' r='3' fill='%23f8c1f1' /%3E%3Cline x1='10' y1='10' x2='10' y2='15' stroke='%23f8c1f1' stroke-width='2' /%3E%3C/svg%3E");*/
+/*    }*/
+/*}*/
 
 
 /* List Styles */
@@ -63,13 +63,14 @@ li {
 /* Header Styles */
 
 header {
-    text-align: center;
+    text-align: left;
     margin: 0 auto;
     font-size: 69%;
+    padding-left: 1.5em;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    margin: 1em auto 0.25em auto;
+    margin: 1em auto 0 auto;
 }
 
 h1 {
@@ -119,6 +120,20 @@ a:hover {
     margin-top: 0;
 }
 
+.headline {
+    margin-top: 0.5em;
+    margin-bottom: 0.2em;
+}
+
+.headline::before {
+    content: "###.";
+    color: var(--accent-color);
+}
+
+.headline a:hover {
+    text-decoration: underline wavy;
+}
+
 main {
     max-width: 100vw;
     margin: 1em auto;
@@ -140,7 +155,7 @@ footer {
     margin-top: 2em;
     padding: 0.1em 0;
     width: 100%;
-    font-size: 80%;
+    font-size: 95%;
 }
 
 /* Style links in the footer */
@@ -180,8 +195,8 @@ th {
 
 /* Reset paragraph styles */
 p {
-    margin: 1.2em 0;
-    line-height: 1.5em;
+    margin: 1em 0;
+    line-height: 1.45em;
 }
 
 /* Styles for the blockquote element */
@@ -196,15 +211,20 @@ blockquote p {
 }
 
 /* Styles for the custom footnote element */
-.footnote {
+.footnote-item {
     font-size: 80%;
     color: var(--text-color);
 }
 
-.footnote::before {
+.footnote-item::before {
     content: "Note: ";
     font-weight: bold;
+    font-variant: all-small-caps;
     color: var(--accent-color);
+}
+
+.footnote-item p {
+    margin-top: 0.2em;
 }
 
 /* Code block styles */
@@ -236,9 +256,14 @@ code {
     display: inline-block;
 }
 
+nav {
+    padding: 1em 1em 0 1em;
+}
+
 nav ul li {
     display: inline; /* Display list items horizontally */
     margin-right: 0.5em; /* Add spacing between list items */
+    line-height: 1.5em;
 }
 
 nav ul {
@@ -252,11 +277,17 @@ nav ul {
 
 .post-title {
     margin: 0.75em 0;
+    line-height: 1.35em;
+}
+
+.post-content__title {
+    margin-top: 0.45em;
 }
 
 .post-description {
     color: var(--accent-color);
-    margin: 0.5em 0;
+    margin-top: 0.25em;
+    margin-bottom: 0.5em;
 }
 
 main article ul li a, main article ol li a {
@@ -297,19 +328,21 @@ img {
     right: 0.65em;
 }
 
-
 /* Media Queries */
 
 @media (min-width: 768px) {
-    main {
-        max-width: 800px;
-    }
-
     body {
+        max-width: 800px;
+        margin: 0 auto;
         font-size: 1.2em;
     }
 
+    nav {
+        padding: 1em 0 0 0;
+    }
+
     header {
+        padding-left: 0;
         font-size: 81%;
     }
 }
