--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,8 @@
     --background-color: #110b0b; /* Dark background color */
     --secondary-background-color: #281b1b; /* Lighter background color */
     --text-color: #b9b3b3; /* Light text color */
-    --link-color: #06a3d7; /* Bold blue link color */
-    --accent-color: #f35032; /* Bold red accent color */
+    --link-color: #0695c5; /* Bold blue link color */
+    --accent-color: #b43a26; /* Bold red accent color */
     --header-color: #c27d03; /* Bold orange header color */
 }
 
@@ -126,7 +126,7 @@ a:hover {
 }
 
 .headline::before {
-    content: "###.";
+    content: "~.";
     color: var(--accent-color);
 }
 
@@ -299,6 +299,7 @@ img {
     height: auto;
     display: block;
     margin: 1em auto;
+    border: 1px var(--text-color) solid;
 }
 
 .ascii-garden {
