--- a/src/meta.njk
+++ b/src/meta.njk
@@ -6,7 +6,7 @@ templateEngineOverride: njk, md
 ---
 ### Why and what is this?
 
-It's a personal blog.
+It's a personal blog. A [post about this site](/2023/posts/why/) is available.
 I write about things that find me interesting. Not all of it will make sense; that's fine.
 
 Locate more technical details about this site in [the colophon](/colophon).
