Add home link to bottom of posts

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -7,3 +7,7 @@ layout: layouts/base
 <div class="post-content">
   {{ content | safe }}
 </div>
+
+<div style="margin-top: 0.8em;">
+<small><a href="/" title="homepage">home</a></small>
+</div>
