--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -35,6 +35,7 @@ body {
     color: var(--text-color);
     font-size: 1.08em;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Ccircle cx='10' cy='10' r='8' fill='%23281b1b' fill-opacity='0.1' /%3E%3Ccircle cx='10' cy='7' r='3' fill='%23281b1b' /%3E%3Cline x1='10' y1='10' x2='10' y2='15' stroke='%23281b1b' stroke-width='2' /%3E%3C/svg%3E");
+    filter: contrast(1.8);
 }
 
 /*@media (prefers-color-scheme: light) {*/
